Version 4.1.6
- Added FILENAME_MAX to stdio.h
- Added some missing functions to libc.a
- Fixed a typo in implementation of rqpin
- Fixed BASIC instrrev function
- Fixed some problems with Windows absolute paths
- Supported more Spin2 operators

Version 4.1.5
- Suppressed optimization of inline assembly inside ORG/END (but not ASM/ENDASM)
- Fixed some issues with compiling with the -C flag
- Fixed passing simple local variables by reference
- Fixed float printf with 0 digits after decimal point
- Fixed alignl/alignw in .spin files
- Fixed use of empty function in if statements
- Fixed getrnd instruction without any operands
- Added pinstart(), pinsetup(), and pinclear() builtins
- Added support for x.[m..n] bitfield access in Spin
- Added muldiv64() builtin and FRAC operator
- Added more stdio functions for C
- Added Spin2 SEND builtin

Version 4.1.4
- Fixed a problem with pruning of methods called indirectly via a pointer
- Fixed function pointers pointing outside of current module
- Fixed comments and/or spaces after ASM in Spin code
- Fixed a problem with C local variable names used on RHS of initialization
- Fixed COG PC output in listing files for sub-objects
- Fixed incorrect treatment of functions containing LOOKUP/LOOKDOWN
- Fixed an optimizer bug that could lead to memory corruption sometimes
- Fixed promotion of array arguments to coginit
- Improved stack handling in COG functions
- Implemented default parameter values for C
- Made recognition of _ empty assignment marker be P2 only
- Accept ORG/END as well as ASM/ENDASM for inline assembly in Spin2
- Accept "foo.bar" notation for constants as well as "foo#bar"
- Accept BYTE, WORD, LONG modifiers for Spin local variables
- Accept some uses of $ in inline assembly
- Added some more simpletools functions
- Added many P2 smartpin constants
- Began work on stdio functions
- Recognize <= and >= for .spin2 files
- Made "_" have a special meaning only in .spin2